@@ -17,6 +17,8 @@ else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 Changes for CVS:
 
+plugin/plugin_python.c: Use correct format specifiers for item values and
+   experience values.
 plugin/plugin_python.c: Make CFPython.IsCanBePicked return whether the object
    can be picked up. (Did return whether the object cannot be picked up.)
 plugin/plugin_python.c: Do not return a pointer to a variable on the stack.
